# BeeTales-Translator-Lens

./: .gitignore  DISTRIBUTION.md  README.md  THIRD_PARTY_NOTICES.md  main.py  pyproject.toml  requirements-build.txt  requirements.txt
.github/workflows/: quality.yml
beetales_translator_lens/: __init__.py  application.py  constants.py  exceptions.py  performance.py
beetales_translator_lens/capture/: __init__.py  capture_engine.py  change_detector.py  image_preprocessor.py  screen_region.py
beetales_translator_lens/ocr/: __init__.py  base.py  models.py  paddle_engine.py
beetales_translator_lens/platform/: __init__.py  windows_capture_exclusion.py  windows_dpi.py  windows_hotkeys.py
beetales_translator_lens/resources/: __init__.py
beetales_translator_lens/resources/minisbd_models/: es.onnx
beetales_translator_lens/storage/: __init__.py  history_store.py  logging_setup.py  paths.py  settings_store.py  translation_cache_store.py
beetales_translator_lens/translation/: __init__.py  argos_engine.py  argos_support.py  base.py  language_detector.py  model_manager.py  models.py  route_resolver.py  text_normalizer.py  translation_cache.py
beetales_translator_lens/ui/: __init__.py  about_dialog.py  capture_overlay.py  first_run_wizard.py  history_dialog.py  instructions_dialog.py  main_controller.py  model_manager_dialog.py  settings_dialog.py  theme.py  translation_panel.py  widget_helpers.py
beetales_translator_lens/workers/: __init__.py  capture_worker.py  model_download_worker.py  ocr_worker.py  persistence_worker.py  translation_worker.py
packaging/: beetales_translator_lens.spec  version_info.txt
scripts/: build_windows.ps1  create_venv.ps1  run_tests.ps1
tests/: __init__.py  test_argos_engine.py  test_argos_support.py  test_capture_engine.py  test_change_detector.py  test_history_store.py  test_image_preprocessor.py  test_language_detector.py  test_logging_setup.py  test_model_manager.py  test_ocr_models.py  test_paddle_engine.py  test_performance.py  test_route_resolver.py  test_screen_region.py  test_settings_store.py  test_text_normalizer.py  test_translation_cache.py  test_translation_cache_store.py  test_ui_layout.py  test_windows_hotkeys.py
