[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "beetales-translator-lens"
version = "0.1.0"
description = "Lupa flotante local para reconocer y traducir texto en Windows"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {file = "LICENSE"}
authors = [{name = "Sorairei"}]
dependencies = [
    "PySide6>=6.7,<7",
    "platformdirs>=4.2,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8.2,<9"]

[project.scripts]
beetales-translator-lens = "beetales_translator_lens.application:run_application"

[tool.setuptools.packages.find]
include = ["beetales_translator_lens*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
