[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "beetales-translator-lens"
version = "0.6.2"
description = "Local floating lens for recognizing and translating text on Windows"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {file = "LICENSE"}
authors = [{name = "Sorairei"}]
dependencies = [
    "PySide6>=6.7,<7",
    "platformdirs>=4.2,<5",
    "mss>=10,<11",
    "numpy>=1.26,<3",
    "opencv-contrib-python==4.10.0.84",
    "paddleocr>=3.3,<4",
    "paddlex[ocr-core]>=3.3,<4",
    "paddlepaddle==3.3.0",
    "argostranslate>=1.9,<2",
    "lingua-language-detector>=2.1,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8.2,<9"]

[project.scripts]
beetales-translator-lens = "beetales_translator_lens.application:run_application"

[tool.setuptools.packages.find]
include = ["beetales_translator_lens*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
